2003-04-22  J. Brobecker  <brobecker@gnat.com>

	* config/pa/tm-hppa.h: Remove obsolete code, was used by
	the hppa-pro target only.

2003-04-21  J. Brobecker  <brobecker@gnat.com>

	Ongoing multi-arch conversion effort for HP/UX:
	* config/pa/tm-hppa.h: Move all macro that are no longer
	defined now that GDB_MULTI_ARCH is now set to 1 from here...
	* config/pa/tm-hppa64.h: ... to here (hppa64 is not multiarch'ed yet).

2003-04-21  J. Brobecker  <brobecker@gnat.com>

	* config/pa/tm-hppa.h: Obsolete a section that was only used
	for hppa-pro.

2003-04-21  J. Brobecker  <brobecker@gnat.com>

	Ongoing multi-arch conversion for HP/UX.
	* config/pa/tm-hppa.h (GDB_MULTI_ARCH): Set to 1. Do not define
	if already defined (allows hppa64 to stay non-multiarched for now).
	* config/pa/tm-hppa64.h (GDB_MULTI_ARCH): Define.

2003-04-21  Andrew Cagney  <cagney@redhat.com>

	* frame.c (frame_id_eq): Fail when the code_addr's do not match.

2003-04-21  Andrew Cagney  <cagney@redhat.com>

	* i386-tdep.c (i386_gdbarch_init): Replace "mmx_num_regs" with
	"i386_num_mmx_regs".

2003-04-21  Andrew Cagney  <cagney@redhat.com>

	* infcall.c: New file.
	* infcall.h: New file.
	* valarith.c: Include "infcall.h".
	* scm-lang.c, objc-lang.cm, hppa-tdep.c, gcore.c: Ditto.
	* eval.c, ada-valprint.c, ada-lang.c: Ditto.
	* Makefile.in (valarith.o, scm-lang.o): Update dependencies.
	(objc-lang.o, hppa-tdep.o, gcore.o): Update dependencies.
	(eval.o, ada-valprint.o, ada-lang.o): Update dependencies.
	(SFILES): Add "infcall.c"
	(COMMON_OBS): Add "infcall.o".
	(infcall.o): Specify dependencies.
	* value.h (call_function_by_hand): Delete declaration.
	* inferior.h (run_stack_dummy): Delete declaration.
	* infcmd.c (breakpoint_auto_delete_contents): Move to "infcall.c".
	(run_stack_dummy): Move to "infcall.c", merged into
	call_function_by_hand.
	* valops.c (call_function_by_hand): Moved to "infcall.c".
	(find_function_addr, value_arg_coerce): Ditto.